
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 unsigned long O_INIT_MM ;
 unsigned long O_INIT_TASK ;
 int O_MM_STRUCT_MMAP ;
 int O_MM_STRUCT_PGD ;
 int O_TASK_STRUCT_MM ;
 unsigned long PAGE_OFFSET_BASE ;
 int exit (int ) ;
 unsigned long find_task_by_pid (unsigned long,int) ;
 unsigned long g_kernel_text ;
 unsigned long g_mmap ;
 int g_physmap ;
 int g_ptsc ;
 int info (char*,...) ;
 int ptsc_init (int *,int ,unsigned long) ;
 unsigned long read_field_8 (unsigned long,int ) ;

__attribute__((used)) static void pts_init(int pid) {
 unsigned long mm;

 if (pid != 0) {
  unsigned long init_task = g_kernel_text + O_INIT_TASK;
  info("[.] init_task:        %016lx\n", init_task);

  unsigned long task = find_task_by_pid(init_task, pid);
  info("[.] task:             %016lx\n", task);
  if (task == 0) {
   info("[-] task %d not found\n", pid);
   exit(EXIT_FAILURE);
  } else if (task < PAGE_OFFSET_BASE) {
   info("[-] task sanity check failed (wrong offset?)\n");
   exit(EXIT_FAILURE);
  }

  mm = read_field_8(task, O_TASK_STRUCT_MM);
  info("[.] task->mm:         %016lx\n", mm);
  if (mm == 0) {
   info("[-] mm not found (kernel task?)\n");
   exit(EXIT_FAILURE);
  } else if (mm < PAGE_OFFSET_BASE) {
   info("[-] mm sanity check failed (wrong offset?)\n");
   exit(EXIT_FAILURE);
  }

  g_mmap = read_field_8(mm, O_MM_STRUCT_MMAP);
  info("[.] task->mm->mmap:   %016lx\n", g_mmap);
  if (g_mmap < PAGE_OFFSET_BASE) {
   info("[-] mmap sanity check failed (wrong offset?)\n");
   exit(EXIT_FAILURE);
  }
 } else {
  mm = g_kernel_text + O_INIT_MM;
 }

 unsigned long pgd = read_field_8(mm, O_MM_STRUCT_PGD);
 info("[.] task->mm->pgd:    %016lx\n", pgd);
 if (pgd < PAGE_OFFSET_BASE) {
  info("[-] pgd sanity check failed (wrong offset?)\n");
  exit(EXIT_FAILURE);
 }

 ptsc_init(&g_ptsc, g_physmap, pgd);
}
